crates/parser/tests/cases/snapshots/cases__errors__module_nonsense.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(module_nonsense), module::parse_module, \"))\")"

---
error: Unmatched `)`
  ┌─ module_nonsense:1:1
  │
1 │ ))
  │ ^

error: failed to parse module
  ┌─ module_nonsense:1:1
  │
1 │ ))
  │ ^ unexpected token
  │
  = Note: expected import, contract, struct, type or const


